--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,15 @@
+<h1><%= @team["name"] %></h1>
 
+<h2>Team Motto: <%= @team["motto"] %></h2>
 
+<h2>Hero Name: <%= @team["members"][0]["name"] %></h2>
+<p>Hero Power: <%= @team["members"][0]["power"] %></p>
+<p>Hero Biography: <%= @team["members"][0]["bio"] %></p>
 
+<h2>Hero Name: <%= @team["members"][1]["name"] %></h2>
+<p>Hero Power: <%= @team["members"][1]["power"] %></p>
+<p>Hero Biography: <%= @team["members"][1]["bio"] %></p>
+
+<h2>Hero Name: <%= @team["members"][2]["name"] %></h2>
+<p>Hero Power: <%= @team["members"][2]["power"] %></p>
+<p>Hero Biography: <%= @team["members"][2]["bio"] %></p>
