--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,10 @@
+<h1><%= @team.name %></h1>
 
+<h2>Team Motto: <%= @team.motto %></h2>
 
-
+<h1>Heroes</h1>
+<% @superheroes.each do |hero| %>
+  <p>Hero Name: <%= hero.name %></p>
+  <p>Hero Power: <%= hero.power %></p>
+  <p>Hero Biography: <%= hero.bio %></p>
+<% end %>
